[package]
name = "vapours"
version = "0.0.0"
description = "A collection of utilities surrounding vapoursynth4-rs."
license = "MIT"
edition = "2021"
homepage = "https://sgt0.github.io/vapours"
repository = "https://github.com/sgt0/vapours"
include = [
  "src",
  "Cargo.toml",
  "LICENSE.md",
]

[features]
default = []

[dependencies]
const-str = "^0.5.7"
miette = "^7.4.0"
num-derive = "^0.4.2"
num-traits = "^0.2.19"
seq-macro = "^0.3.5"
strum = "^0.26.3"
strum_macros = "^0.26.4"
thiserror = "^2.0.7"
vapoursynth4-rs = "^0.3.0"

[dev-dependencies]
approx = "^0.5.1"
rstest = "^0.23.0"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
cargo_common_metadata = { level = "allow" }
cast_possible_truncation = { level = "allow" }
cast_possible_wrap = { level = "allow" }
cast_sign_loss = { level = "allow" }
module_name_repetitions = { level = "allow" }
unreadable_literal = { level = "allow" }

[lints.rustdoc]
all = { level = "warn" }

[package.metadata.cargo-shear]
ignored = ["strum"]
