[package]
name = "vapours"
version = "0.1.5"
description = "A collection of utilities surrounding vapoursynth4-rs."
license = "MIT"
edition = "2021"
homepage = "https://sgt0.github.io/vapours"
repository = "https://github.com/sgt0/vapours"
include = [
  "src",
  "Cargo.toml",
  "LICENSE.md",
]

[features]
default = []

[dependencies]
const-str = "^0.6.2"
miette = "^7.5.0"
num-derive = "^0.4.2"
num-traits = "^0.2.19"
seq-macro = "^0.3.5"
strum = "^0.27.1"
strum_macros = "^0.27.1"
thiserror = "^2.0.12"
vapoursynth4-rs = "^0.3.0"

[dev-dependencies]
approx = "^0.5.1"
rstest = "^0.25.0"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
cargo_common_metadata = { level = "allow" }
cast_possible_truncation = { level = "allow" }
cast_possible_wrap = { level = "allow" }
cast_sign_loss = { level = "allow" }
module_name_repetitions = { level = "allow" }
unreadable_literal = { level = "allow" }

[lints.rustdoc]
all = { level = "warn" }

[package.metadata.cargo-shear]
ignored = ["strum"]
