[package]
name = "vapours"
version = "0.2.3"
description = "A collection of utilities surrounding vapoursynth4-rs."
license = "MIT"
edition = "2021"
homepage = "https://sgt0.github.io/vapours"
repository = "https://github.com/sgt0/vapours"
include = [
  "src",
  "Cargo.toml",
  "LICENSE.md",
]

[features]
default = []

[dependencies]
const-str = "^0.7.1"
miette = "^7.6.0"
num-derive = "^0.4.2"
num-traits = "^0.2.19"
seq-macro = "^0.3.6"
strum = "^0.27.2"
strum_macros = "^0.27.2"
thiserror = "^2.0.18"
vapoursynth4-rs = "^0.4.0"

[dev-dependencies]
approx = "^0.5.1"
rstest = "^0.26.1"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
cargo_common_metadata = { level = "allow" }
cast_possible_truncation = { level = "allow" }
cast_possible_wrap = { level = "allow" }
cast_sign_loss = { level = "allow" }
module_name_repetitions = { level = "allow" }
unreadable_literal = { level = "allow" }

[lints.rustdoc]
all = { level = "warn" }

[package.metadata.cargo-shear]
ignored = ["strum"]
